# arrow2_with_object_store

./: Cargo.toml  README.md
src/: async_read_from_object_store.rs  main.rs  read_from_object_store.rs
